# deslop

./: .deslop.toml  .gitattributes  .gitignore  Cargo.toml  MAINTAINERS.md  README.md  SECURITY.md  action.yml  deslop  gopdfsuit2_results.txt  makefile  package-lock.json  result_gopdfsuit.txt  results.txt  snapback_results.txt  temp_claw.txt  temp_gopdfsuit.txt  temp_snapback.txt  verified_gopdfsuit_results.txt  verified_snapback_results.txt
.github/: pull_request_template.md  release.yml
corpus/: manifest.json
docs/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
fuzz/: Cargo.toml
fuzz/corpus/go_parser/: seed_go.txt
fuzz/corpus/python_parser/: seed_python.txt
fuzz/corpus/rust_parser/: seed_rust.txt
fuzz/fuzz_targets/: go_parser.rs  python_parser.rs  rust_parser.rs
guides/: README.md  architecture-guardrails.md  enhancement.md  evaluation-and-promotion-policy.md  features-and-detections.md  gopdfsuit-scan-report.md  implementation-guide.md  inventory-regression-guards.md  master-roadmap.md  newplan02042026.md  release-checklist.md
reports/: go-rule-fixture-coverage-plan.md  go_fixture_quality_audit_2026-04-30.md  go_performance_fixture_quality_audit_2026-04-30_batches_001_200.md  go_performance_fixture_quality_audit_2026-04-30_batches_201_400.md  go_performance_fixture_quality_audit_2026-04-30_batches_401_500.md  gopdfsuit_false_positives_only.csv  gopdfsuit_line_by_line_validation.csv  gopdfsuit_line_by_line_validation_after_fixes.csv  gopdfsuit_line_by_line_validation_after_fixes.md  gopdfsuit_line_by_line_validation_summary.md  gopdfsuit_new_findings_report.md  gopdfsuit_temp_snippet_triage_report.md  python-rule-fixture-coverage-plan.md  results-category-report.md  (+1 more)
src/: io.rs  (+5 more)
(+9423 files in other folders)
