[package]
name = "deslop"
version = "0.1.0"
edition = "2024"
description = "A static analyzer that spots low-context and AI-assisted code patterns across naming, concurrency, security, performance, and test quality."
repository = "https://github.com/chinmay-sawant/deslop"
license = "MIT" 
readme = "README.md"
keywords = ["cli", "utility", "tool","slop-detector","code-quality"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
ignore = "0.4.25"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.26.7"
tree-sitter-go = "0.25.0"
tree-sitter-rust = "0.24.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
